Detalles sobre ROOT, Uproot y Delphes.

--- a/Exploratory-Analysis-Using-Uproot-Matplotlib-and-Seaborn.ipynb
+++ b/Exploratory-Analysis-Using-Uproot-Matplotlib-and-Seaborn.ipynb
@@ -80,6 +80,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Root Tree Description\n",
+    "\n",
+    "In https://delphes.github.io/workbook/root-tree-description/ one can find the description of all classes used to store output data. Take in account that moment units are GeV and position units are mm."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploratory Analysis Using Uproot, Matplot and Seaborn"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
