Avance en el análisis exploratorio de los datos de las colisiones con decaimiento a leptones. Se crearon dos dataframes de pandas con la información de eta, phi y p_t de los muones y electrones detectados en la simulación.

--- a/Lepton-Invariant-Mass-Distribution.ipynb
+++ b/Lepton-Invariant-Mass-Distribution.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -609,7 +609,7 @@
        " 'MissingET_size']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
        "<Array [[97.8, 20], [], [], ..., [...], [], []] type='500000 * var * float32'>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,12 +777,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# A similar thing happens to the electron data. Since we only can get information from the events that come\n",
-    "# in lepton pairs we have to clean the not useful data.\n"
+    "# in lepton pairs we have to clean the not useful data.\n",
+    "\n",
+    "events = len(pt_muon)\n",
+    "\n",
+    "# This will be the cleaned data for the muon detections:\n",
+    "pt_m = np.array([])\n",
+    "eta_m = np.array([])\n",
+    "phi_m = np.array([])\n",
+    "charge_m = np.array([])\n",
+    "\n",
+    "for i in range(events):\n",
+    "    if len(pt_muon[i]) == 2:\n",
+    "        pt_m = np.append(pt_m, pt_muon[i])\n",
+    "        eta_m = np.append(eta_m, eta_muon[i])\n",
+    "        phi_m = np.append(phi_m, phi_muon[i])\n",
+    "        charge_m = np.append(charge_m, charge_muon[i])\n",
+    "        \n",
+    "# And this will be the cleaned data for the electron detections:\n",
+    "pt_e = np.array([])\n",
+    "eta_e = np.array([])\n",
+    "phi_e = np.array([])\n",
+    "charge_e = np.array([])\n",
+    "\n",
+    "for i in range(events):\n",
+    "    if len(pt_electron[i]) == 2:\n",
+    "        pt_e = np.append(pt_e, pt_electron[i])\n",
+    "        eta_e = np.append(eta_e, eta_electron[i])\n",
+    "        phi_e = np.append(phi_e, phi_electron[i])\n",
+    "        charge_e = np.append(charge_e, charge_electron[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To save all this we can create a DataFrame so we can visualice the data. And then we can create a .csv file so\n",
+    "# we don't have to run all the previous code again (which for the last cell was pretty slow):\n",
+    "\n",
+    "muon_ = {\n",
+    "    \"pt_m\": pt_m,\n",
+    "    \"eta_m\": eta_m,\n",
+    "    \"phi_m\": phi_m,\n",
+    "    \"charge_m\": charge_m\n",
+    "}\n",
+    "\n",
+    "muon_data = pd.DataFrame(muon_)\n",
+    "path = \"/tf/Higgs-Boson-LHC-Collision-Detector/muon_data.csv\"\n",
+    "muon_data.to_csv(path, index = False)\n",
+    "\n",
+    "electron_ = {\n",
+    "    \"pt_e\": pt_e,\n",
+    "    \"eta_e\": eta_e,\n",
+    "    \"phi_e\": phi_e,\n",
+    "    \"charge_e\": charge_e\n",
+    "}\n",
+    "\n",
+    "electron_data = pd.DataFrame(electron_)\n",
+    "path = \"/tf/Higgs-Boson-LHC-Collision-Detector/electron_data.csv\"\n",
+    "electron_data.to_csv(path, index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pt_m</th>\n",
+       "      <th>eta_m</th>\n",
+       "      <th>phi_m</th>\n",
+       "      <th>charge_m</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>97.789627</td>\n",
+       "      <td>0.878810</td>\n",
+       "      <td>2.420791</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>19.964151</td>\n",
+       "      <td>-0.802487</td>\n",
+       "      <td>-2.895401</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>95.542183</td>\n",
+       "      <td>-0.516883</td>\n",
+       "      <td>-0.010758</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>45.712536</td>\n",
+       "      <td>0.572928</td>\n",
+       "      <td>-0.509320</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>48.594921</td>\n",
+       "      <td>1.577177</td>\n",
+       "      <td>2.543303</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        pt_m     eta_m     phi_m  charge_m\n",
+       "0  97.789627  0.878810  2.420791       1.0\n",
+       "1  19.964151 -0.802487 -2.895401      -1.0\n",
+       "2  95.542183 -0.516883 -0.010758       1.0\n",
+       "3  45.712536  0.572928 -0.509320      -1.0\n",
+       "4  48.594921  1.577177  2.543303       1.0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('/tf/Higgs-Boson-LHC-Collision-Detector/muon_data.csv')\n",
+    "df.head()"
    ]
   },
   {
