Se añade código para hacer el filtrado de los datos necesarios para el cálculo de la masa invariante.

--- a/Lepton-Invariant-Mass-Distribution.ipynb
+++ b/Lepton-Invariant-Mass-Distribution.ipynb
@@ -777,7 +777,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [63], line 28\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(pt_electron[i]) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m2\u001b[39m:\n\u001b[1;32m     27\u001b[0m     pt_e \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mappend(pt_e, np\u001b[38;5;241m.\u001b[39marray([pt_electron[i,\u001b[38;5;241m0\u001b[39m], pt_electron[i,\u001b[38;5;241m1\u001b[39m]]))\n\u001b[0;32m---> 28\u001b[0m     eta_e \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m\u001b[43m(\u001b[49m\u001b[43meta_e\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43meta_electron\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43meta_electron\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     29\u001b[0m     phi_e \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mappend(phi_e, np\u001b[38;5;241m.\u001b[39marray([phi_electron[i,\u001b[38;5;241m0\u001b[39m], phi_electron[i,\u001b[38;5;241m1\u001b[39m]]))\n\u001b[1;32m     30\u001b[0m     charge_e \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mappend(charge_e, np\u001b[38;5;241m.\u001b[39marray([charge_electron[i,\u001b[38;5;241m0\u001b[39m], charge_electron[i,\u001b[38;5;241m1\u001b[39m]]))\n",
+      "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mappend\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m/usr/local/lib/python3.8/dist-packages/numpy/lib/function_base.py:5444\u001b[0m, in \u001b[0;36mappend\u001b[0;34m(arr, values, axis)\u001b[0m\n\u001b[1;32m   5442\u001b[0m     values \u001b[38;5;241m=\u001b[39m ravel(values)\n\u001b[1;32m   5443\u001b[0m     axis \u001b[38;5;241m=\u001b[39m arr\u001b[38;5;241m.\u001b[39mndim\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[0;32m-> 5444\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mconcatenate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43marr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalues\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43maxis\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mconcatenate\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "# # A similar thing happens to the electron data. Since we only can get information from the events that come\n",
+    "# # in lepton pairs we have to clean the not useful data.\n",
+    "\n",
+    "# events = len(pt_muon)\n",
+    "\n",
+    "# # This will be the cleaned data for the muon detections:\n",
+    "# pt_m = np.array([])\n",
+    "# eta_m = np.array([])\n",
+    "# phi_m = np.array([])\n",
+    "# charge_m = np.array([])\n",
+    "\n",
+    "# for i in range(events):\n",
+    "#     if len(pt_muon[i]) == 2:\n",
+    "#         pt_m = np.append(pt_m, np.array([pt_muon[i,0], pt_muon[i,1]]))\n",
+    "#         eta_m = np.append(eta_m, np.array([eta_muon[i,0], eta_muon[i,1]]))\n",
+    "#         phi_m = np.append(phi_m, np.array([phi_muon[i,0], phi_muon[i,1]]))\n",
+    "#         charge_m = np.append(charge_m, np.array([charge_muon[i,0], charge_muon[i,1]]))\n",
+    "        \n",
+    "# # And this will be the cleaned data for the electron detections:\n",
+    "# pt_e = np.array([])a\n",
+    "# eta_e = np.array([])\n",
+    "# phi_e = np.array([])\n",
+    "# charge_e = np.array([])\n",
+    "\n",
+    "# for i in range(events):\n",
+    "#     if len(pt_electron[i]) == 2:\n",
+    "#         pt_e = np.append(pt_e, np.array([pt_electron[i,0], pt_electron[i,1]]))\n",
+    "#         eta_e = np.append(eta_e, np.array([eta_electron[i,0], eta_electron[i,1]]))\n",
+    "#         phi_e = np.append(phi_e, np.array([phi_electron[i,0], phi_electron[i,1]]))\n",
+    "#         charge_e = np.append(charge_e, np.array([charge_electron[i,0], charge_electron[i,1]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,13 +845,6 @@
     "phi_m = np.array([])\n",
     "charge_m = np.array([])\n",
     "\n",
-    "for i in range(events):\n",
-    "    if len(pt_muon[i]) == 2:\n",
-    "        pt_m = np.append(pt_m, pt_muon[i])\n",
-    "        eta_m = np.append(eta_m, eta_muon[i])\n",
-    "        phi_m = np.append(phi_m, phi_muon[i])\n",
-    "        charge_m = np.append(charge_m, charge_muon[i])\n",
-    "        \n",
     "# And this will be the cleaned data for the electron detections:\n",
     "pt_e = np.array([])\n",
     "eta_e = np.array([])\n",
@@ -806,11 +852,73 @@
     "charge_e = np.array([])\n",
     "\n",
     "for i in range(events):\n",
-    "    if len(pt_electron[i]) == 2:\n",
-    "        pt_e = np.append(pt_e, pt_electron[i])\n",
-    "        eta_e = np.append(eta_e, eta_electron[i])\n",
-    "        phi_e = np.append(phi_e, phi_electron[i])\n",
-    "        charge_e = np.append(charge_e, charge_electron[i])"
+    "    if len(pt_muon[i]) == 2:\n",
+    "        pt_m = np.append(pt_m, np.array([pt_muon[i,0], pt_muon[i,1]]))\n",
+    "        eta_m = np.append(eta_m, np.array([eta_muon[i,0], eta_muon[i,1]]))\n",
+    "        phi_m = np.append(phi_m, np.array([phi_muon[i,0], phi_muon[i,1]]))\n",
+    "        charge_m = np.append(charge_m, np.array([charge_muon[i,0], charge_muon[i,1]]))\n",
+    "    else:\n",
+    "        if len(pt_electron[i]) == 2:\n",
+    "            pt_e = np.append(pt_e, np.array([pt_electron[i,0], pt_electron[i,1]]))\n",
+    "            eta_e = np.append(eta_e, np.array([eta_electron[i,0], eta_electron[i,1]]))\n",
+    "            phi_e = np.append(phi_e, np.array([phi_electron[i,0], phi_electron[i,1]]))\n",
+    "            charge_e = np.append(charge_e, np.array([charge_electron[i,0], charge_electron[i,1]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1., -1.,  1., ...,  1.,  1., -1.])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "charge_m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "trial = np.array([[0,1],[0,1]])\n",
+    "out = trial[:,1]\n",
+    "print(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1. -1.  1. ...  1.  1. -1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(charge_m)"
    ]
   },
   {
@@ -847,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +1034,7 @@
        "4  48.594921  1.577177  2.543303       1.0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,10 +1046,235 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        pt_m     eta_m     phi_m  charge_m\n",
+      "1  19.964151 -0.802487 -2.895401      -1.0\n",
+      "3  45.712536  0.572928 -0.509320      -1.0\n",
+      "5  38.855106  0.372206  0.499532      -1.0\n",
+      "6  83.976875  0.908262  1.499397      -1.0\n",
+      "9  58.603443  0.978713  1.781077      -1.0\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 218705 entries, 1 to 437391\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column    Non-Null Count   Dtype  \n",
+      "---  ------    --------------   -----  \n",
+      " 0   pt_m      218705 non-null  float64\n",
+      " 1   eta_m     218705 non-null  float64\n",
+      " 2   phi_m     218705 non-null  float64\n",
+      " 3   charge_m  218705 non-null  float64\n",
+      "dtypes: float64(4)\n",
+      "memory usage: 8.3 MB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "muons = df[df[\"charge_m\"]==-1.0]\n",
+    "print(muons.head())\n",
+    "print(muons.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        pt_m     eta_m     phi_m  charge_m\n",
+      "0  97.789627  0.878810  2.420791       1.0\n",
+      "2  95.542183 -0.516883 -0.010758       1.0\n",
+      "4  48.594921  1.577177  2.543303       1.0\n",
+      "7  42.813442  0.123594  0.145307       1.0\n",
+      "8  71.092407 -0.281558  2.078060       1.0\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 218687 entries, 0 to 437390\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column    Non-Null Count   Dtype  \n",
+      "---  ------    --------------   -----  \n",
+      " 0   pt_m      218687 non-null  float64\n",
+      " 1   eta_m     218687 non-null  float64\n",
+      " 2   phi_m     218687 non-null  float64\n",
+      " 3   charge_m  218687 non-null  float64\n",
+      "dtypes: float64(4)\n",
+      "memory usage: 8.3 MB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "anti_muons = df[df[\"charge_m\"]==1.0]\n",
+    "print(anti_muons.head())\n",
+    "print(anti_muons.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pt_e</th>\n",
+       "      <th>eta_e</th>\n",
+       "      <th>phi_e</th>\n",
+       "      <th>charge_e</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>54.378262</td>\n",
+       "      <td>0.697100</td>\n",
+       "      <td>-0.352306</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>50.591053</td>\n",
+       "      <td>1.150615</td>\n",
+       "      <td>1.429148</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>87.847977</td>\n",
+       "      <td>-0.939279</td>\n",
+       "      <td>0.551186</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>25.325140</td>\n",
+       "      <td>0.939353</td>\n",
+       "      <td>0.300517</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>77.224907</td>\n",
+       "      <td>-0.145583</td>\n",
+       "      <td>2.972307</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        pt_e     eta_e     phi_e  charge_e\n",
+       "0  54.378262  0.697100 -0.352306       1.0\n",
+       "1  50.591053  1.150615  1.429148      -1.0\n",
+       "2  87.847977 -0.939279  0.551186      -1.0\n",
+       "3  25.325140  0.939353  0.300517       1.0\n",
+       "4  77.224907 -0.145583  2.972307      -1.0"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('/tf/Higgs-Boson-LHC-Collision-Detector/electron_data.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         pt_e     eta_e     phi_e  charge_e\n",
+      "1   50.591053  1.150615  1.429148      -1.0\n",
+      "2   87.847977 -0.939279  0.551186      -1.0\n",
+      "4   77.224907 -0.145583  2.972307      -1.0\n",
+      "6  117.825531 -0.090705  1.904418      -1.0\n",
+      "9   47.292149 -0.036156  1.390495      -1.0\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 191804 entries, 1 to 383597\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column    Non-Null Count   Dtype  \n",
+      "---  ------    --------------   -----  \n",
+      " 0   pt_e      191804 non-null  float64\n",
+      " 1   eta_e     191804 non-null  float64\n",
+      " 2   phi_e     191804 non-null  float64\n",
+      " 3   charge_e  191804 non-null  float64\n",
+      "dtypes: float64(4)\n",
+      "memory usage: 7.3 MB\n",
+      "None\n",
+      "        pt_e     eta_e     phi_e  charge_e\n",
+      "0  54.378262  0.697100 -0.352306       1.0\n",
+      "3  25.325140  0.939353  0.300517       1.0\n",
+      "5  48.918434  1.188260  2.624266       1.0\n",
+      "7  44.724277 -0.235326 -3.017226       1.0\n",
+      "8  56.355495 -1.097858  0.145205       1.0\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 191794 entries, 0 to 383596\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column    Non-Null Count   Dtype  \n",
+      "---  ------    --------------   -----  \n",
+      " 0   pt_e      191794 non-null  float64\n",
+      " 1   eta_e     191794 non-null  float64\n",
+      " 2   phi_e     191794 non-null  float64\n",
+      " 3   charge_e  191794 non-null  float64\n",
+      "dtypes: float64(4)\n",
+      "memory usage: 7.3 MB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "electrons = df[df[\"charge_e\"]==-1.0]\n",
+    "print(electrons.head())\n",
+    "print(electrons.info())\n",
+    "\n",
+    "anti_electrons = df[df[\"charge_e\"]==1.0]\n",
+    "print(anti_electrons.head())\n",
+    "print(anti_electrons.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# In the past cells what we did was to separate the l^+ and l^- for each case. This way, we can now compute the\n",
+    "# necessary data, that is the momentum for each kind of lepton.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
